deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring
  labels:
    app: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: centos-monitored
        image: centos:7
        ports:
        - containerPort: 9100
        command:
        - "/bin/bash"
        - "-c"
        - "yum install -y wget && wget https://github.com/prometheus/node_exporter/releases/download/v1.2.2/node_exporter-1.2.2.linux-amd64.tar.gz && tar xvfz node_exporter-1.2.2.linux-amd64.tar.gz && ./node_exporter-1.2.2.linux-amd64/node_exporter"
      
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
      
      - name: prometheus
        image: prom/prometheus
        ports:
        - containerPort: 9090
        args:
        - "--config.file=/etc/prometheus/prometheus.yaml"
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/prometheus.yaml
          subPath: prometheus.yaml

      - name: promtail
        image: grafana/promtail
        ports:
        - containerPort: 9080
        args:
        - "--config.file=/etc/promtail/config.yaml"
        volumeMounts:
        - name: promtail-config
          mountPath: /etc/promtail/config.yaml
          subPath: promtail-config.yaml

      - name: loki
        image: grafana/loki:3.0.0
        ports:
        - containerPort: 3100
        args:
        - "--config.file=/etc/loki/local-config.yaml"
        volumeMounts:
        - name: loki-config
          mountPath: /etc/loki/local-config.yaml
          subPath: local-config.yaml

      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus

      - name: promtail-config
        configMap:
          name: promtail-config

      - name: loki-config
        configMap:
          name: local-config

---
apiVersion: v1
kind: Service
metadata:
  name: monitoring
spec:
  type: NodePort
  selector:
    app: monitor
  ports:
  - protocol: TCP
    name: grafana
    port: 3000
    targetPort: 3000
    nodePort: 32000

  - protocol: TCP
    name: prometheus
    port: 9090
    targetPort: 9090
    nodePort: 32001

  - protocol: TCP
    name: promtail
    port: 9080
    targetPort: 9080
    nodePort: 32002

  - protocol: TCP
    name: centos-monitored
    port: 9100
    targetPort: 9100
    nodePort: 32003

  - protocol: TCP
    name: loki
    port: 3100
    targetPort: 3100
    nodePort: 32004

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: monitor.com
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
